# analysis_hoops

./: .gitignore  do_not_commit.py  main.py  pyproject.toml
Input/proc_inputs/: picks.csv  positions.csv
Output/: regression_results.csv  regression_summary.txt  significant_results.csv  user_summary_table.csv
src/generate_analysis/: generate_analysis.py
src/read_positions/: read_positions.py
